--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body class="<%= controller.controller_name %>">
     <header id="header">
       <%= render "layouts/top_navigation" %>
-      <%= yield :slider %>
+      <%= yield :head_decor %>
     </header>
     <%= yield :search_bar %>
 
