--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :slider do %>
+<% content_for :head_decor do %>
   <%= render "layouts/slider" %>
 <% end %>
 <% content_for :search_bar do %>
