--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -75,9 +75,23 @@ a {
 }
 
 #banner {
+  height: 300px;
+  overflow: hidden;
+  position: relative;
   img {
     width: 100%;
-    height: 300px;
+  }
+  .tour-title {
+    position: absolute;
+    top: 50%;
+    left: 40%;
+    color: $brand-yellow;
+    text-transform: uppercase;
+    h2 {
+      font-weight: bold;
+      font-size: 32px;
+      letter-spacing: 4px;
+    }
   }
 }
 
@@ -153,6 +167,50 @@ a {
   }
 }
 
+.tour-info {
+  margin: 20px auto;
+  padding-bottom: 15px;
+  border-bottom: 1px solid $brand-footer-color;
+  .short-descrip {
+    text-align: center;
+    font-size: 16px;
+    margin-bottom: 20px;
+    color: $brand-darker;
+    span {
+      color: $brand-overlay-color;
+      font-weight: bold;
+    }
+  }
+  h4 {
+    font-size: 22px;
+    font-weight: 600;
+    color: $brand-secondary;
+    letter-spacing: 1.5px;
+  }
+  .itinerary, .content {
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid $brand-gray;
+  }
+}
+
+.tour-reviews {
+  .review {
+    border-bottom: 1px solid $brand-gray;
+    margin-bottom: 10px;
+  }
+}
+
+.tour-suggest {
+  margin-top: 30px;
+  .thumbnail {
+    img {
+      width: 100%;
+      max-height: 190px;
+    }
+  }
+}
+
 #footer {
   .foot-sign-up {
     height: 400px;
@@ -199,4 +257,53 @@ a {
       right: 50%;
     }
   }
+}
+
+
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu>.dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px;
+    border-radius: 0 6px 6px 6px;
+}
+
+.dropdown-submenu:hover>.dropdown-menu {
+    display: block;
+}
+
+.dropdown-submenu>a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #ccc;
+    margin-top: 5px;
+    margin-right: -10px;
+}
+
+.dropdown-submenu:hover>a:after {
+    border-left-color: #fff;
+}
+
+.dropdown-submenu.pull-left {
+    float: none;
+}
+
+.dropdown-submenu.pull-left>.dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
 }
