--- a/app/views/layouts/_banner.html.erb
+++ b/app/views/layouts/_banner.html.erb
@@ -1,3 +1,6 @@
-<div id="banner" class="container-fluid">
-  <%= image_tag "img_bg_3.jpg" %>
+<div id="banner">
+    <%= image_tag "img_bg_3.jpg", class: "img-responsive" %>
+    <div class="tour-title">
+      <h2>TOUR NAME</h2>
+    </div>
 </div>
